--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "cssnano": "^4.1.10",
     "parcel-plugin-clean-dist": "0.0.6",
     "sass": "^1.17.3"
+  },
+  "dependencies": {
+    "vue": "^2.6.10"
   }
 }
